P2: Improve responsiveness, some code cleanup
Summary:
Edit the CSS of O2 to improve the responsiveness.

- Instead of moving widgets in and out of the sidebar, just move the navigation. This can be improved even further.
- Use a traditional, bigger, hamburger on the left, and animate with CSS for performance
- Teensy tweaks to the O2 visuals plus code cleanups. Round avatars, and more consistent margins
- Move to `box-sizing: border-box;`, as this allows us to kill off a bunch of `calc`'s

Test Plan:
- Test the vanilla O2 and see it works correctly on desktops and mobile phones
- Sandbox various internal P2s and see that any design customizations don't break, or break too badly

Reviewers: pento

Subscribers: obenland

Differential Revision: https://code.a8c.com/D3673

--- a/css/src/global/_o2-tools.scss
+++ b/css/src/global/_o2-tools.scss
@@ -37,7 +37,7 @@ $green-50:	#009632;
 /* TYPOGRAPHY */
 // Typography definitions (think fonts, font sizes, weights, etc. Variables to be used elsewhere.)
 
-$sans: "Open Sans", sans-serif;
+$sans: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen-Sans", "Ubuntu", "Cantarell", "Helvetica Neue", sans-serif;
 $mono: Monaco, Consolas, "Courier New", monospace;
 $mono-font: 11px Monaco, Consolas, "Andale Mono", "DejaVu Sans Mono", "Courier New", monospace;
 $serif:  "Noto Serif", serif;
