--- a/css/src/ui/_layout.scss
+++ b/css/src/ui/_layout.scss
@@ -1,34 +1,26 @@
-/* LAYOUT */
+/**
+ * General Layout
+ */
+
 
 /* =Layout
 ----------------------------------------------- */
 
 .site {
-	width: 98%;
+	width: 100%;
 	max-width: 1200px;
 	margin: 0 auto;
-	padding: 3.7em 0;
+	padding: 40px 20px;
 	position: relative;
-
-	@include  breakpoint( 'tablet-portrait' ){
-		margin:0;
-		width: 100%;
-
-		article{
-
-			&.o2-app-new-post{
-			 	margin: 1em .5em;
-			 }
-		}
-	}
 }
 
 .custom-menu .site {
-	padding-top: 6.1em;
+	padding-top: 60px;
 
-	@include  breakpoint( 'tablet-portrait' ){
-		padding-top: 1em;
+	@include breakpoint( 'tablet-portrait' ) {
+		padding-top: 20px;
 	}
+
 }
 
 .site-main {
@@ -44,12 +36,13 @@
 .content-area {
 	float: left;
 	margin: 0;
-	width: 73%;
+	width: 75%;
+	padding-right: 20px;
 }
 
 .no-sidebar {
+
 	.site {
-		padding-top: 3.7em;
 		max-width: 1000px;
 	}
 
@@ -60,15 +53,13 @@
 	.content-area {
 		float: none;
 		width: 100%;
+		padding-right: 0;
 	}
+
 }
 
 .site-content {
 	margin: 0;
-
-	@include  breakpoint( 'tablet-portrait' ){
-		margin-top: 11px;
-	}
 }
 
 .site-footer {
@@ -80,23 +71,39 @@
 	.site-info {
 		margin: 10px 15px;
 	}
+
 }
 
-/* =Secondary
------------------------------------------------ */
+@include breakpoint( 'tablet-portrait' ) {
+
+	.content-area {
+		width: 100%;
+		padding-right: 0;
+	}
+
+	#primary-modal {
+		display: none;
+	}
+
+}
+
+
+/**
+ * Hamburger menu
+ */
+
 #secondary {
 	clear: right;
 
-	@include  breakpoint( 'tablet-portrait' ){
+	@include breakpoint( 'tablet-portrait' ) {
 		position: absolute;
-		top: -20px;
-		right: -275px;
-		width: 240px;
-		padding: 15px;
-		overflow: visible;
+		top: 32px;
+		left: -100%;
+		width: 60%;
+		min-width: 300px;
 		background: $gray-0;
-		box-shadow: 0px -10px 10px rgba( $gray-50, 0.15 );
 		z-index: 5;
+		box-shadow: 0 0 20px rgba( 0, 0, 0, 0.2 );
 	}
 
 	ul {
@@ -110,101 +117,98 @@
 		ul {
 			margin-left: 1em;
 		}
+
 	}
+
 }
 
-@include  breakpoint( 'tablet-portrait' ){
+
+@include breakpoint( 'tablet-portrait' ) {
+
+	.site-main {
+		clear: both;
+	}
+
 	#secondary-content {
 		display: none;
 	}
 
-	body {
-		&.responsive-show {
-			overflow-y: hidden;
-			height: 100%;
-			position: fixed;
-			top: 0;
-
-			#secondary {
-				position: fixed;
-				right: 0px;
-				top: 60px;
-				bottom: 0px;
-				overflow-y: scroll;
-			}
-
-			#secondary-content {
-				display: block;
-			}
-
-			#secondary-toggle {
-				left: 4px;
-				top: 2px;
-			}
-
-			#primary-modal {
-				display: block;
-				height: 100%;
-				width: 100%;
-				position: fixed;
-				top: 0;
-				left: 0;
-				background: rgba( $gray-100, 0.3 );
-			}
-
-			#o2-expand-editor {
-				display: none;
-			}
-		}
-
-		&.animating {
-			#secondary {
-				transition: transform .25s ease-in-out;
-				-moz-transition: -moz-transform .25s ease-in-out;
-				-webkit-transition: -webkit-transform .25s ease-in-out;
-			}
-
-			#secondary-content {
-				display: block;
-			}
-
-			#secondary-toggle {
-				left: 6px;
-			}
-
-			&.left #secondary {
-				transform: translate3d( -270px, 0, 0 );
-				-moz-transform: translate3d( -270px, 0, 0 );
-				-webkit-transform: translate3d( -270px, 0, 0 );
-			}
-
-			&.right #secondary {
-				transform: translate3d( 270px, 0, 0 );
-				-moz-transform: translate3d( 270px, 0, 0 );
-				-webkit-transform: translate3d( 270px, 0, 0 );
-			}
-		}
+	#secondary {
+		position: fixed;
+		z-index: 10;
+		bottom: 0px;
+		overflow-y: auto;
+		transition: all .25s ease;
 	}
 
+	#secondary-content {
+		display: block;
+		background: $gray-0;
+		padding: 20px;
+	}
+
+	#primary-modal {
+		position: fixed;
+		top: 0;
+		right: 0;
+		bottom: 0;
+		left: 0;
+	}
+
+	// Sidebar is showing
+	body.responsive-show {
+		position: fixed;
+		top: 32px;
+
+		#secondary {
+			left: 0;
+		}
+
+		#primary-modal {
+			display: block;
+		}
+
+		#o2-expand-editor {
+			display: none;
+		}
+
+	}
 
 	#primary,
 	#secondary {
 		-webkit-backface-visibility: hidden;
-		-webkit-perspective: 1000;
 	}
 
 }
 
-@include  breakpoint( 'tablet-portrait' ){
-	#page{
-		overflow-x: hidden;
+@media only screen and ( max-width: 782px ) {
+	#secondary {
+		top: 46px;
 	}
 
-	#primary{
-		width: 100%;
-	}
+	body.responsive-show {
+		position: fixed;
+		top: 46px;
+		left: 0;
+		right: 0;
+		bottom: 0;
 
-	#primary-modal {
-		display: none;
+		#secondary {
+			left: 0;
+		}
 	}
 }
+
+@media only screen and ( max-width: 480px ) {
+	// Sidebar is showing
+	body.responsive-show {
+		#secondary {
+			top: 46px;
+		}
+		
+		#wpadminbar {
+			top: -46px;
+		}
+	}
+}
+
