--- a/css/src/ui/_menu-navigation.scss
+++ b/css/src/ui/_menu-navigation.scss
@@ -47,20 +47,15 @@
 	clear: both;
 	display: block;
 	max-width: 1200px;
-	margin: 0 auto;
-	padding: 0;
+	margin: 0;
+	padding: 0 20px;
 	background: rgba( $gray-0, 0.75 );
-	width: 100%;
 
 	@include  breakpoint( 'tablet-portrait' ){
 		top: 0;
 		left: 0;
+		right: 0;
 		position: relative;
-		overflow: hidden;
-
-		* {
-			box-sizing: border-box;
-		}
 	}
 
 	ul {
@@ -155,6 +150,7 @@
 			border-right: 1px solid $gray-5;
 			border-bottom: 1px solid $gray-5;
 			border-left: 1px solid $gray-5;
+			background: $gray-0;
 			display: none;
 			float: left;
 			position: absolute;
@@ -250,7 +246,7 @@
 	}
 }
 
-@include  breakpoint('web'){
+@include breakpoint('web'){
 	body:not(.custom-menu) {
 		#primary {
 			margin-top: 0 !important;
@@ -258,35 +254,38 @@
 	}
 }
 
+#secondary-toggle {
+	display: none;
+}
 
-@include  breakpoint( 'tablet-portrait' ){
+@include breakpoint( 'tablet-portrait' ) {
+
 	#primary {
 		height: 100%;
-		margin-top: 2em !important;
 	}
 
 	#secondary-toggle {
-		position: absolute;
-		width: 32px;
-		height: 32px;
-		display: inline-block;
-		background: transparent;
-		top: 18px;
-		left: -38px;
+		display: block;
+		float: left;
+		margin-right: 20px;
+		width: 48px;
+		height: 48px;
+		white-space: nowrap;
+		position: relative;
+		z-index: 1;
 
 		&:before {
 			content: '\f419';
 			-webkit-font-smoothing: antialiased;
 			font: normal 32px/1 'Genericons';
+			position: relative;
+			top: 8px;
+		}
+
+		strong {
+			display: none;
 		}
 	}
-
-	body:not(.custom-menu) {
-		#secondary-toggle {
-			top: -11px;
-		}
-	}
-
 }
 
 @media only screen and (min-width: $tablet-portrait ) {
@@ -299,5 +298,6 @@
 		position: absolute;
 		top: 0;
 		left: 0;
+		right: 0;
 	}
 }
