--- a/css/src/ui/_posts.scss
+++ b/css/src/ui/_posts.scss
@@ -1,40 +1,17 @@
+/**
+ * General layout
+ */
+
 /* POSTS */
+
 article.post,
 article#post-new,
 article.page {
 
 	-webkit-transform-style: preserve3d;
 	background: $gray-0;
-	margin: 0 0 3.2em;
+	margin: 0 0 30px;
 	padding: 1.6em 0;
-
-
-	@include breakpoint( 'handset-portrait'){
-		margin: 0 0.5em 0.5em 0.5em;
-	}
-
-	&.sticky {
-		border: 2px #d47300 solid;
-		background: #ffffe6;
-	}
-
-	a.author-avatar {
-		float: left;
-		border: 2px rgba( $gray-0, 0.8 ) solid;
-		box-shadow: 0px 1px 2px rgba( $gray-100, 0.10 );
-
-		@include breakpoint('web'){
-			box-shadow: 0px;
-			border: 0px;
-		}
-
-
-		img.avatar {
-			margin-right: 0px;
-			display: block;
-			float: left;
-		}
-	}
 
 	p {
 		margin: 0 0 1.2em 0;
@@ -54,127 +31,103 @@ article.page {
 		padding: 0;
 		position: relative;
 		display: block;
-		margin-left:-2.2em;
+		margin-bottom: 20px;
 
-		@include breakpoint('web'){
-			margin-left: 0;
-			}
-
-		img.avatar {
-			width:50px;
-			height:50px;
-
-			@include breakpoint('web'){
-				height: 30px !important;
-				width: 30px !important;
-				margin-top: 3px;
-			}
-
-			@include breakpoint( 'handset-portrait' ){
-				height: 30px !important;
-				width: 30px !important;
-			}
+		.author-avatar {
+			float: left;
+			margin-right: 10px;
 		}
 
-		.entry-meta {
-			clear: none;
-			position: relative;
-			min-height: 40px;
-			margin-right: 0px;
-			margin-left: 69px;
+		img.avatar {
+			width: 36px;
+			height: 36px;
+		}
 
-			@include breakpoint('web'){
-				margin-left: 40px;
-			}
+	}
 
-			@include breakpoint( 'handset-portrait' ){
-				margin-left: 43px;
-			}
+	.entry-meta {
+		clear: none;
+		position: relative;
+		margin-right: 0px;
+		line-height: 36px;
 
-			.entry-actions {
-				&.o2-actions {
-					-webkit-transform-style: preserve3d;
-					display: block;
-					float: none;
-					text-align: right;
-					position: absolute;
-					top: 0;
-					right: 0;
+		.entry-actions {
+			&.o2-actions {
+				-webkit-transform-style: preserve3d;
+				display: block;
+				float: none;
+				text-align: right;
+				position: absolute;
+				top: 0;
+				right: 0;
 
-					@include breakpoint( handset-landscape ) {
-						position: relative;
-					}
-
-					a {
-						padding-right: 0.4em;
-
-						&:last-child {
-							border-right: none 0;
-							padding-right: 0;
-						}
-					}
-				}
-			}
-
-			.entry-comment-count {
-				display: none;
-				float: right;
-				padding: 0;
-				margin: 0;
-				text-align: center;
-				color: $gray-10;
-				font-size: 11px;
-				font-weight: bold;
-				width: 32px;
-				height: 32px;
-				position: relative;
-
-				.genericon {
-					font-size: 32px;
-					padding: 0;
-					margin: -5px 0 0 0;
-					color: $gray-60;
-					position: absolute;
-					right: 16px;
-				}
-
-				.comment-count {
+				@include breakpoint( handset-landscape ) {
 					position: relative;
 				}
 
-				// When there are no comments on a post, make the bubble more subtle
-				&.entry-comment-count-0 {
-					color: $gray-10;
+				a {
+					padding-right: 0.4em;
 
-					.genericon {
-						color: $gray-5;
+					&:last-child {
+						border-right: none 0;
+						padding-right: 0;
 					}
 				}
 			}
 		}
+
+		.entry-comment-count {
+			display: none;
+			float: right;
+			padding: 0;
+			margin: 0;
+			text-align: center;
+			color: $gray-10;
+			font-size: 11px;
+			font-weight: bold;
+			width: 32px;
+			height: 32px;
+			position: relative;
+
+			.genericon {
+				font-size: 32px;
+				padding: 0;
+				margin: -5px 0 0 0;
+				color: $gray-60;
+				position: absolute;
+				right: 16px;
+			}
+
+			.comment-count {
+				position: relative;
+			}
+
+			// When there are no comments on a post, make the bubble more subtle
+			&.entry-comment-count-0 {
+				color: $gray-10;
+
+				.genericon {
+					color: $gray-5;
+				}
+			}
+		}
+
+		.genericon {
+			vertical-align: inherit;
+		}
+
 	}
 
 	.entry-title {
-		margin: 0 0 0.4em 69px;
+		margin: 0.4em 0;
 		padding: 0;
 
 		a {
 			color: inherit;
 		}
 
-		@include breakpoint('web'){
-			padding-left: 40px;
-			margin-left: 0;
-		}
-
-		@include breakpoint( 'tablet-portrait' ) {
-			margin-left: 0;
-		}
-
 		@include breakpoint( 'handset-portrait' ){
-			padding: 0 !important;
 			font-size: 1.5em;
-			padding-left: 0px !important;
 		}
 
 	}
@@ -240,51 +193,29 @@ article.page {
 	}
 }
 
-@include  breakpoint( 'handset-portrait' ){
 
+/**
+ * All avatars
+ */
 
+img.avatar {
+	display: block;
+	border-radius: 100%;
 }
 
 
-
-
+/**
+ * Sharedaddy
+ */
 
 div.sharedaddy.sharedaddy-dark .sd-block {
 	border-top: 1px $gray-10 solid;
 }
 
 
-
-
-.entry-meta,
-.comment-meta,
-.page-header {
-	position: relative;
-}
-
-.entry-title,
-.entry-content,
-.entry-summary,
-aside {
-	margin-left: 40px;
-	margin-right: 1.4em;
-
-	@include breakpoint( handset-portrait ){
-		margin-left: 0px;
-	}
-}
-
-
-
-.o2-app-new-post .entry-meta,
-.o2-app-new-post .entry-title,
-.o2-app-new-post .entry-content,
-.o2-app-new-post .entry-summary,
-.o2-app-new-post aside {
-	margin-left: 0;
-}
-
-
+/**
+ * Comments
+ */
 
 .comment-list,
 .comment-list .children {
@@ -297,21 +228,11 @@ aside {
 	word-wrap: break-word;
 }
 
-
-@include  breakpoint('web'){
-	#jp-post-flair {
-		width: calc( 100% + 40px );
-	}
-}
-
-@include  breakpoint( 'tablet-portrait' ){
+@include breakpoint( 'tablet-portrait' ) {
 	input[type="checkbox"] {
 		font-size: 2em;
 	}
 }
-
-
-
 
 .tag-prefix,
 .mentions-prefix {
@@ -327,17 +248,12 @@ aside {
 	display: none;
 }
 
-
-
-
-
-
-
 .post:first-of-type {
 	&.tag-p2-xpost {
 		margin-top: 2em;
 	}
 }
+
 .tag-p2-xpost {
 	background: transparent;
 	padding-bottom: 0;
@@ -361,7 +277,11 @@ aside {
 	}
 
 	.author-avatar {
-		margin-right: 15px;
+		display: block;
+		
+		img {
+			margin-right: 10px;
+		}
 	}
 
 	.o2-comment {
