P2: Sync up dynamic markup, and fix headlines
This commit syncs up the theme template with the dynamic editing plugins. It also fixes an issue with post headers staying where they need to.

--- a/p2-breathe/style.css
+++ b/p2-breathe/style.css
@@ -1533,6 +1533,7 @@ article#post-new .entry-title,
 article.page .entry-title {
   margin: 0.4em 0;
   padding: 0;
+  clear: both;
 }
 article.post .entry-title a,
 article#post-new .entry-title a,
